# ABIR

./: .gitignore  .provenance-corrections.json  .provenance-policy.json  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/abir/: Cargo.toml
crates/abir-adapter/: Cargo.toml
crates/abir-adapter/src/: lib.rs
crates/abir-bcs/: Cargo.toml
crates/abir-bcs/examples/: codec_bundle_probe.rs  forensic_archive_roundtrip.rs  forensic_capsule_probe.rs
crates/abir-bcs/src/: blob.rs  codec.rs  forensic.rs  generation.rs  lib.rs  pack.rs  payload.rs  privacy.rs  restore.rs  wire.rs
crates/abir-bcs/tests/: blob.rs  forensic.rs  generations.rs  pack.rs  payload_frames.rs  privacy.rs  restore.rs  training_profiles.rs  wire.rs
crates/abir-conformance/: Cargo.toml
crates/abir-conformance/examples/: generate_fixtures.rs
crates/abir-conformance/src/: lib.rs  semantic_matrix.rs
crates/abir-conformance/tests/: bcs2_vectors.rs  canonical_fixtures.rs  codec_bundles.rs  normative_manifest.rs  semantic_matrix.rs
crates/abir-python/: Cargo.toml
crates/abir-python/src/: lib.rs  training.rs
crates/abir-store/: Cargo.toml
crates/abir-store/src/: fs.rs  lib.rs
crates/abir-store/tests/: fs_store.rs  payload_access.rs  store.rs
crates/abir-training/: Cargo.toml
crates/abir-training/examples/: core_conformance.rs
crates/abir-training/src/: acceptance.rs  compiler.rs  continual.rs  decision.rs  error.rs  lib.rs  model.rs  store.rs
crates/abir-training/tests/: compiler.rs  training.rs
crates/abir/src/: atom.rs  canonical.rs  canonical_parse.rs  catalog.rs  concept.rs  dataset.rs  exact.rs  failure.rs  governance.rs  id.rs  lib.rs  limits.rs  time.rs  view.rs
crates/abir/tests/: atom_semantics.rs  canonical_hash.rs  canonical_parse.rs  catalog_semantics.rs  dataset_validation.rs  identity_exact_failures.rs  payload_identity.rs  views_payload.rs
evidence/: README.md  bcs2-store.json  semantic-core.json
fixtures/: README.md
fixtures/bcs2/codec-v1/: lml-lossless.bcs2  lml-lossless.catalog.json  lmq-progressive.bcs2  lmq-progressive.catalog.json  manifest.json
fixtures/bcs2/v1/: dataset.bcs2  encrypted-discoverable.bcs2  forensic-image.bcs2  forensic-tree.bcs2  generational-dataset.bcs2  manifest.json
fixtures/invalid/: README.md
fixtures/invalid/schema/: malformed-content-id.json  present-without-payload.json
fixtures/valid/: canonical-tensor.content-id  canonical-tensor.json  semantic-matrix.content-id  semantic-matrix.json
fuzz/: Cargo.toml
fuzz/corpus/: README.md  dataset_draft.sha256
fuzz/corpus/dataset_draft/: shape-edge  valid-small
fuzz/fuzz_targets/: bcs2_wire.rs  dataset_draft.rs
python/tests/: test_parity.py  test_training_window_store.py
registries/: README.md  adapter-profiles-v1.json  bcs2-codecs-v1.json  bcs2-crypto-v1.json  bcs2-profiles-v1.json  concepts-v1.json  failures-v1.json  proofs-v1.json
schema/: README.md  abir-semantic-v1.schema.json  adapter-mapping-v1.schema.json  adapter-profile-v1.schema.json  adapter-validation-v1.schema.json  bcs2-codec-bundle-v1.schema.json  bcs2-codec-registry-v1.schema.json  bcs2-crypto-v1.schema.json  bcs2-profile-v1.schema.json  training-acceptance-v1.schema.json  training-snapshot-v1.schema.json  training-snapshot-v2.schema.json
spec/: ABIR_SEMANTIC_V1.md  ADAPTER_V1.md  BCS2_V1.md  CODEC_BUNDLE_V1.md  COMPATIBILITY.md  README.md  TRAINING_ACCEPTANCE_V1.md  TRAINING_WINDOW_STORE_V1.md  TRAINING_WINDOW_STORE_V2.md  adapter-v1.manifest.json  bcs2-v1.manifest.json  semantic-v1.manifest.json  training-acceptance-v1.manifest.json  training-v1.manifest.json  training-v2.manifest.json
tools/: check_commit_provenance.py  collect_bcs2_store_evidence.py  collect_semantic_core_evidence.py  test_adapter_validation_contract.py  verify_adapter_contract.py  verify_bcs2_vectors.py
tools/scripts/adr0139_producers/archive-malformed/: capsule-metadata-bitflip.py
tools/scripts/adr0139_producers/archive-malformed/receipts/: capsule-header-bitflip.json  capsule-metadata-bitflip.json  capsule-payload-bitflip.json  capsule-trailer-bitflip.json
tools/scripts/adr0139_producers/archive-roundtrip/: bdf.py
tools/scripts/adr0139_producers/compute-pccp/: lmq-model-provenance.py
tools/scripts/adr0139_producers/compute-pccp/receipts/: lmq-model-provenance.json
tools/scripts/adr0139_producers/compute-profile/: bcs.lml.lossless.v1.py
tools/scripts/adr0139_producers/compute-profile/receipts/: bcs.lml.lossless.v1.json  bcs.lmq.progressive.v1.json
tools/scripts/adr0139_producers/compute-semantic/: lmq-semantic-roundtrip.py
tools/scripts/adr0139_producers/compute-semantic/receipts/: lml-semantic-roundtrip.json  lmq-semantic-roundtrip.json
tools/scripts/adr0139_producers/core/: host-stream.py  mcu-aot.py
tools/scripts/adr0139_producers/core/receipts/: blut-durable.json  host-stream.json  mcu-aot.json  python.json  rust.json
