[workspace]
resolver = "2"
members = [
    "crates/abir",
    "crates/abir-bcs",
    "crates/abir-conformance",
    "crates/abir-store",
    "crates/abir-adapter",
    "crates/abir-python",
]

[workspace.package]
edition = "2021"
rust-version = "1.81"
license = "AGPL-3.0-or-later"
version = "0.1.0"
