[package]
name = "abir-adapter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors = ["ABIR contributors <noreply@example.com>"]
description = "Capability-declared foreign-standard Adapter interface for ABIR."

[dependencies]
abir = { path = "../abir", version = "=0.1.0" }
blake3 = "=1.5.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "abir_adapter"
path = "src/lib.rs"
