[package]
name = "abir-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "AGPL-3.0-or-later"

[lib]
name = "abir"
crate-type = ["cdylib"]

[features]
default = ["abi3-py310"]
abi3-py310 = ["pyo3/abi3-py310"]
test-fixtures = []

[dependencies]
abir-core = { package = "abir", path = "../abir", version = "0.1.0" }
abir-bcs = { path = "../abir-bcs", version = "0.1.0" }
abir-conformance = { path = "../abir-conformance", version = "0.1.0" }
abir-training = { path = "../abir-training", version = "0.1.0" }
pyo3 = { version = "0.22", features = ["macros", "extension-module", "abi3-py310"] }
