[package]
name = "abir"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "AGPL-3.0-or-later"
authors = ["ABIR contributors <noreply@example.com>"]

[features]
default = ["std"]
std = ["alloc", "blake3/std", "serde_json/std"]
alloc = ["dep:blake3", "dep:serde_json"]

[dependencies]
blake3 = { version = "=1.5.5", default-features = false, optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }

[lib]
name = "abir"
path = "src/lib.rs"
